Fix broken /proxy link for packaged UI